<?xml version="1.0"?>
<resources>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_card_form_card_holder_name">Card Holder Name</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>

    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_month">Month</string>
    <string name="bt_year">Year</string>

    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>

    <string name="bt_address1_required">Address is required</string>
</resources>