<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:weightSum="2"
        style="@style/bt_field_container">

        <!--<ImageView-->
            <!--style="@style/bt_card_form_icon"-->
            <!--tools:ignore="ContentDescription"-->
            <!--android:id="@+id/bt_card_form_card_number_icon"/>-->

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:paddingEnd="0dp"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_card_number">

            <io.github.ynagarjuna1995.card_form_ui.view.CardEditText
                android:drawablePadding="12dp"
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_card_number"
                android:hint="@string/bt_form_hint_card_number"
                android:contentDescription="@string/bt_form_hint_card_number"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>


        <ImageButton
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription"
            style="@style/bt_card_form_field"
            android:background="@android:color/transparent"
            android:src="@drawable/bt_ic_camera"
            android:id="@+id/scan_card"
            android:layout_width="56dp"
            android:layout_height="32dp" />

    </LinearLayout>

    <View style="@style/bt_divider"/>

    <LinearLayout
        style="@style/bt_field_container"
        tools:ignore="RtlCompat"
        android:weightSum="2"
        android:paddingEnd="0dp">

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_expiration">

            <io.github.ynagarjuna1995.card_form_ui.view.ExpirationDateEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_expiration"
                android:hint="@string/bt_form_hint_expiration"
                android:contentDescription="@string/bt_form_hint_expiration"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_cvv">

            <io.github.ynagarjuna1995.card_form_ui.view.CvvEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_cvv"
                android:hint="@string/bt_form_hint_cvv"
                android:contentDescription="@string/bt_form_hint_cvv"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View style="@style/bt_divider"/>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="2">

        <!--<ImageView-->
            <!--style="@style/bt_card_form_icon"-->
            <!--tools:ignore="ContentDescription"-->
            <!--android:id="@+id/bt_card_form_postal_code_icon"/>-->

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:paddingEnd="0dp"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_postal_code">

            <io.github.ynagarjuna1995.card_form_ui.view.PostalCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_postal_code"
                android:hint="@string/bt_form_hint_postal_code"
                android:contentDescription="@string/bt_form_hint_postal_code"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View style="@style/bt_divider"/>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="5">

        <!--<ImageView-->
            <!--style="@style/bt_card_form_icon"-->
            <!--tools:ignore="ContentDescription"-->
            <!--android:id="@+id/bt_card_form_mobile_number_icon"/>-->

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingEnd="0dp"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_country_code">

            <io.github.ynagarjuna1995.card_form_ui.view.CountryCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_country_code"
                android:hint="@string/bt_form_hint_country_code"
                android:contentDescription="@string/bt_form_hint_country_code"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="0dp"
            android:layout_weight="3"
            app:hintEnabled="false"
            android:labelFor="@+id/bt_card_form_mobile_number">

            <io.github.ynagarjuna1995.card_form_ui.view.MobileNumberEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_mobile_number"
                android:hint="@string/bt_form_hint_mobile_number"
                android:contentDescription="@string/bt_form_hint_mobile_number"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        tools:ignore="RtlCompat"
        android:id="@+id/bt_card_form_mobile_number_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:visibility="gone"
        android:paddingEnd="0dp"/>

</merge>
